--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,24 @@
 ---
-title: Image Optimization in CloudCannon
+metadata:
+  title: Image Optimization on CloudCannon
+  description: A showcase of image optimization techniques with Eleventy Image and CloudCannon.
+  cta:
+    text: Watch the Video
+    url: https://www.youtube.com/watch?v=Dsd831CSazA
 ---
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<title>{{ title }}</title>
-		<link rel="stylesheet" href="/style.css">
-		<script type="module" src="/browser-window.js"></script>
-		<script type="module" src="/demo-currentsrc.js"></script>
-	</head>
-	<body>
-		<header>
-			<h1>{{ title }}</h1>
-		</header>
-		<main>
-			{%- for image in collections.images %}
-			{%- if image.data.image %}
-			{%- unless image.data.disabled %}
-			<section>
-				<browser-window shadow flush icon url="{{ image.data.attribution_url }}">
-					{%- assign sizes = "(min-width: 50em) 44.4375em, 89vw" %}
-					{%- image image.data.image, image.data.alt_text, sizes, image.data.prefer_svg -%}
-				</browser-window>
-				{{ image.data.image | friendlySizeTable: image.data.prefer_svg }}
-			</section>
-			{%- endunless %}
-			{%- endif %}
-			{%- endfor %}
-		</main>
-	</body>
-</html>
+<link rel="stylesheet" href="/style.css">
+<script type="module" src="/browser-window.js"></script>
+<script type="module" src="/demo-currentsrc.js"></script>
+{%- for image in collections.images %}
+{%- if image.data.image %}
+{%- unless image.data.disabled %}
+<section>
+	<browser-window shadow flush icon url="{{ image.data.attribution_url }}">
+		{%- assign sizes = "(min-width: 50em) 44.4375em, 89vw" %}
+		{%- image image.data.image, image.data.alt_text, sizes, image.data.prefer_svg -%}
+	</browser-window>
+	{{ image.data.image | friendlySizeTable: image.data.prefer_svg }}
+</section>
+{%- endunless %}
+{%- endif %}
+{%- endfor %}
