Use resizeasaurus to show dynamic behavior

--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,19 @@ metadata:
     <link rel="stylesheet" href="/style.css">
     <script type="module" src="/browser-window.js"></script>
     <script type="module" src="/demo-currentsrc.js"></script>
+    <script type="module" src="/resizeasaurus.js"></script>
 ---
 {%- for image in collections.images %}
 {%- if image.data.image %}
 {%- unless image.data.disabled %}
 <section>
-	<browser-window shadow flush icon url="{{ image.data.attribution_url }}">
-		{%- assign sizes = "(min-width: 50em) 44.4375em, 89vw" %}
-		{%- image image.data.image, image.data.alt_text, sizes, image.data.prefer_svg -%}
-	</browser-window>
-	{{ image.data.image | friendlySizeTable: image.data.prefer_svg }}
+  <resize-asaurus persist>
+    <browser-window shadow flush icon url="{{ image.data.attribution_url }}">
+      {%- assign sizes = "(min-width: 50em) 44.4375em, 89vw" %}
+      {%- image image.data.image, image.data.alt_text, sizes, image.data.prefer_svg -%}
+    </browser-window>
+  </resize-asaurus>
+  {{ image.data.image | friendlySizeTable: image.data.prefer_svg }}
 </section>
 {%- endunless %}
 {%- endif %}
